Add minor fixes. Add builtin ixi files